credit card payment processing in the middle

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
 #	database driver
 jdbc.driverClassName=com.mysql.jdbc.Driver
 # database url
-jdbc.url=jdbc:mysql://localhost:3306/paygo1
+jdbc.url=jdbc:mysql://localhost:3306/paygo
 # database login
 jdbc.userName=root
 # database password
@@ -13,9 +13,9 @@ ws.pass=root
 # BCR web service branch (branch in WSRequest)
 ws.branch=main
 # sender email
-mail.sender=natali.borshcheva@gmail.com
+mail.sender=555@gmail.com
 # mail.sender.pass
-mail.sender.pass=cdyqojkltatuwupo
+mail.sender.pass=cdyqojkltato
 #mail.subject
 mail.subject=Thank you for your order!
 # mail.smtp.port
@@ -28,3 +28,6 @@ mail.smtp.starttls.enable=true
 mail.body.content.type=text/html
 # mail.body.file.name
 mail.body.file.name=/basic.html
+#paygo token for google API
+google.client.id=7777
+
